add custom lines options to vertical bar

--- a/demo/app.component.html
+++ b/demo/app.component.html
@@ -26,6 +26,8 @@
         [roundEdges]="roundEdges"
         [yScaleMax]="yScaleMax"
         [showDataLabel]="showDataLabel"
+        [showVerticalCustomLines]="showVerticalCustomLines"
+        [verticalCustomLines]="verticalCustomLines"
         (select)="select($event)"
         (legendLabelClick)="onLegendLabelClick($event)">
       </ngx-charts-bar-vertical>
