線のクラスを指定できるようにした

--- a/demo/app.component.scss
+++ b/demo/app.component.scss
@@ -317,6 +317,7 @@ main {
 
 }
 
-.bar-v-line {
-  stroke-width: 1px;
+.bar-v-line-tomato {
+  stroke-width: 2px !important;
+  stroke: tomato !important;
 }
